conditionals/src/Terminal Saved Output
Last login: Tue Aug 25 16:24:26 on console
volodymyr@Volodymyrs-MBP ~ % node -- version
internal/modules/cjs/loader.js:1023
  throw err;
  ^

Error: Cannot find module '/Users/volodymyr/version'
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:1020:15)
    at Function.Module._load (internal/modules/cjs/loader.js:890:27)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}
volodymyr@Volodymyrs-MBP ~ % node --version  
v14.2.0
volodymyr@Volodymyrs-MBP ~ % 
volodymyr@Volodymyrs-MBP ~ % 1+1
zsh: command not found: 1+1
volodymyr@Volodymyrs-MBP ~ % node
Welcome to Node.js v14.2.0.
Type ".help" for more information.
> 1+1
2
> 1+778
779
> 
(To exit, press ^C again or ^D or type .exit)
> ^c
^c
^

Uncaught SyntaxError: Unexpected token '^'
> C\
C\
^^

Uncaught SyntaxError: Invalid or unexpected token
> C
Uncaught ReferenceError: C is not defined
> ^c
^c
^

Uncaught SyntaxError: Unexpected token '^'
> C
Uncaught ReferenceError: C is not defined
> 
(To exit, press ^C again or ^D or type .exit)
> C
Uncaught ReferenceError: C is not defined
> 
(To exit, press ^C again or ^D or type .exit)
> 
volodymyr@Volodymyrs-MBP ~ % cd Node\ crash\ course 
volodymyr@Volodymyrs-MBP Node crash course % npm init
This utility will walk you through creating a package.json file.
It only covers the most common items, and tries to guess sensible defaults.

See `npm help json` for definitive documentation on these fields
and exactly what they do.

Use `npm install <pkg>` afterwards to install a package and
save it as a dependency in the package.json file.

Press ^C at any time to quit.
package name: (node-crash course) 
Sorry, name can only contain URL-friendly characters.
package name: (node-crash course) 
Sorry, name can only contain URL-friendly characters.
package name: (node-crash course) y
version: (1.0.0) 
description: node crash course
entry point: (index.js) 
test command: 
git repository: 
keywords: 
author: Vlad Zabhorodnyy
license: (ISC) 
About to write to /Users/volodymyr/Node crash course/package.json:

{
  "name": "y",
  "version": "1.0.0",
  "description": "node crash course",
  "main": "index.js",
  "scripts": {
    "test": "echo \"Error: no test specified\" && exit 1"
  },
  "author": "Vlad Zabhorodnyy",
  "license": "ISC"
}


Is this OK? (yes) 
volodymyr@Volodymyrs-MBP Node crash course % npm install uuid
npm notice created a lockfile as package-lock.json. You should commit this file.
npm WARN y@1.0.0 No repository field.

+ uuid@8.3.0
added 1 package and audited 1 package in 0.351s
found 0 vulnerabilities



   ╭────────────────────────────────────────────────────────────────╮
   │                                                                │
   │      New patch version of npm available! 6.14.4 → 6.14.8       │
   │   Changelog: https://github.com/npm/cli/releases/tag/v6.14.8   │
   │               Run npm install -g npm to update!                │
   │                                                                │
   ╰────────────────────────────────────────────────────────────────╯

volodymyr@Volodymyrs-MBP Node crash course % npm install -D nodemon

> nodemon@2.0.4 postinstall /Users/volodymyr/Node crash course/node_modules/nodemon
> node bin/postinstall || exit 0

Love nodemon? You can now support the project via the open collective:
 > https://opencollective.com/nodemon/donate

npm WARN y@1.0.0 No repository field.

+ nodemon@2.0.4
added 121 packages from 58 contributors and audited 122 packages in 3.59s

9 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities

volodymyr@Volodymyrs-MBP Node crash course % node index.js
Hello from NodeJS
volodymyr@Volodymyrs-MBP Node crash course % node index.js
/Users/volodymyr/Node crash course/person.js:2
    name: 'John Doe';
                    ^

SyntaxError: Unexpected token ';'
    at Object.compileFunction (vm.js:344:18)
    at wrapSafe (internal/modules/cjs/loader.js:1106:15)
    at Module._compile (internal/modules/cjs/loader.js:1140:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1196:10)
    at Module.load (internal/modules/cjs/loader.js:1040:32)
    at Function.Module._load (internal/modules/cjs/loader.js:929:14)
    at Module.require (internal/modules/cjs/loader.js:1080:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (/Users/volodymyr/Node crash course/index.js:1:16)
    at Module._compile (internal/modules/cjs/loader.js:1176:30)
volodymyr@Volodymyrs-MBP Node crash course % node index.js
/Users/volodymyr/Node crash course/person.js:2
    name: 'John Doe';
                    ^

SyntaxError: Unexpected token ';'
    at Object.compileFunction (vm.js:344:18)
    at wrapSafe (internal/modules/cjs/loader.js:1106:15)
    at Module._compile (internal/modules/cjs/loader.js:1140:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1196:10)
    at Module.load (internal/modules/cjs/loader.js:1040:32)
    at Function.Module._load (internal/modules/cjs/loader.js:929:14)
    at Module.require (internal/modules/cjs/loader.js:1080:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (/Users/volodymyr/Node crash course/index.js:1:16)
    at Module._compile (internal/modules/cjs/loader.js:1176:30)
volodymyr@Volodymyrs-MBP Node crash course % node index.js
{ name: 'John Doe', age: 30 }
volodymyr@Volodymyrs-MBP Node crash course % node index.js
Hello my name is John Doe, and I am 30...
volodymyr@Volodymyrs-MBP Node crash course % node index.js
Hello my name is John Doe, and I am 27...
volodymyr@Volodymyrs-MBP Node crash course % node index.js
(node:5904) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
/Users/volodymyr/Node crash course/index.js:1
import Person from './person';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at Object.compileFunction (vm.js:344:18)
    at wrapSafe (internal/modules/cjs/loader.js:1106:15)
    at Module._compile (internal/modules/cjs/loader.js:1140:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1196:10)
    at Module.load (internal/modules/cjs/loader.js:1040:32)
    at Function.Module._load (internal/modules/cjs/loader.js:929:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47
volodymyr@Volodymyrs-MBP Node crash course % node index.js
Hello my name is John Doe, and I am 27...
volodymyr@Volodymyrs-MBP Node crash course % cd reference 
volodymyr@Volodymyrs-MBP reference % node path_demo.js 
volodymyr@Volodymyrs-MBP reference % node path_demo.js
/Users/volodymyr/Node crash course/reference/path_demo.js:1
comst path = require('path')
      ^^^^

SyntaxError: Unexpected identifier
    at Object.compileFunction (vm.js:344:18)
    at wrapSafe (internal/modules/cjs/loader.js:1106:15)
    at Module._compile (internal/modules/cjs/loader.js:1140:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1196:10)
    at Module.load (internal/modules/cjs/loader.js:1040:32)
    at Function.Module._load (internal/modules/cjs/loader.js:929:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47
volodymyr@Volodymyrs-MBP reference % node path_demo.js
/Users/volodymyr/Node crash course/reference/path_demo.js
volodymyr@Volodymyrs-MBP reference % node fs_demo.js  
folder created ....
volodymyr@Volodymyrs-MBP reference % node fs_demo.js
/Users/volodymyr/Node crash course/reference/fs_demo.js:14
fs.writeFile(path.join(__dirname, '/test', hello.txt), 'Hello guys I am writing this file through node.js.', err => {
                                           ^

ReferenceError: hello is not defined
    at Object.<anonymous> (/Users/volodymyr/Node crash course/reference/fs_demo.js:14:44)
    at Module._compile (internal/modules/cjs/loader.js:1176:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1196:10)
    at Module.load (internal/modules/cjs/loader.js:1040:32)
    at Function.Module._load (internal/modules/cjs/loader.js:929:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47
volodymyr@Volodymyrs-MBP reference % node fs_demo.js
file written....
volodymyr@Volodymyrs-MBP reference % node os_demo.js
